oracle/prod/tuwunel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuwunel
  labels:
    app: tuwunel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tuwunel
  template:
    metadata:
      labels:
        app: tuwunel
    spec:
      containers:
        - name: tuwunel
          image: ghcr.io/matrix-construct/tuwunel:latest
          ports:
            - containerPort: 6167
          volumeMounts:
            - name: data
              mountPath: /var/lib/tuwunel
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tuwunel-pvc
