oracle/prod/tuwunel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tuwunel
  labels:
    app: tuwunel
spec:
  ports:
    - port: 6167
      targetPort: 6167
      protocol: TCP
  selector:
    app: tuwunel
